--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "libp2p-pnet": "~0.1.0",
     "libp2p-secio": "~0.11.0",
     "libp2p-spdy": "~0.13.1",
-    "libp2p-tcp": "~0.13.0",
+    "libp2p-tcp": "jgantunes/js-libp2p-tcp",
     "libp2p-webrtc-star": "~0.15.8",
     "libp2p-websockets": "~0.12.1",
     "peer-book": "~0.9.1",
